# ccobra

./: .gitignore  LICENSE  README.md  changelog.txt  pyproject.toml  run_ccobra.py  setup.py
benchmarks/: README.md  ccobra
benchmarks/propositional/: full-adaption.json  full-coverage.json  full.json
benchmarks/relational/: figural-adaption.json  figural-coverage.json  figural.json  premiseorder-adaption.json  premiseorder-coverage.json  premiseorder.json  singlechoice-adaption.json  singlechoice-coverage.json  singlechoice.json  small-large-adaption.json  small-large-coverage.json  verification-adaption.json  verification-coverage.json  verification.json
benchmarks/syllogistic/: 2012-Khemlani-adaption.json  2012-Khemlani-coverage.json  2012-Khemlani.json  2019-Brand-adaption.json  2019-Brand-coverage.json  2019-Riesterer-adaption.json  2019-Riesterer-coverage.json  baseline-adaption.json  baseline-coverage.json  baseline.json  cheat.json  cheatmodel.py  full.json
ccobra/: __init__.py  comparator.py  data.py  domainhandler.py  encoder.py  helper.py  identity_resp_encoder.py  item.py  model.py  responsehandler.py  simulation.py
ccobra/benchmark/: __init__.py  benchmark.py  comparator.py  contextmanager.py  evaluation_handler.py  evaluator.py  evaluator_fullcoverage.py  metrics.py  modelimporter.py  runner.py  (+1 more)
ccobra_bench/: README.md  comparator.py  evaluator.py  metrics.py  modelimporter.py  runner.py
core/: setup.py
doc/: .gitignore
docs/: .gitignore  Makefile  make.bat
orca/: __init__.py  orcadata.py  orcamodel.py  orcamodelsyl.py  simulation.py
(+149 files in other folders)
